--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,17 @@
     </properties>
 
     <dependencies>
+<!--        flowable的依赖-->
+        <dependency>
+            <groupId>org.flowable</groupId>
+            <artifactId>flowable-engine</artifactId>
+            <version>6.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.176</version>
+        </dependency>
         <!--语音转写 SDK-->
         <dependency>
             <groupId>com.iflytek.msp.lfasr</groupId>
