--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,11 @@ spring:
     time-zone: GMT+8
   jmx:
     enabled: false
+  servlet:
+    multipart:
+      max-file-size: 1024MB
+      max-request-size: 1024MB
+
 
 mybatis:
   mapper-locations: classpath:dataImpl/*/*Mapper.xml
