--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
      url: jdbc:mysql://localhost:3306/cinema?serverTimezone=CTT&characterEncoding=UTF-8
      username: root
-     password: Wq123456
+     password: 123456
 #     url: jdbc:mysql://123.57.231.57:3306/cinema
 #     username: root
 #     password: 1qaz!QAZ
